--- a/style.css
+++ b/style.css
@@ -1,22 +1,49 @@
-#local-video-container,
-#remote-video-container {
-  width: 50%;
-  height: 50%;
-  margin: auto;
+.video-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.local-video {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 25%;
+  height: 25%;
+  margin: 1em;
+  border: 1px solid black;
+}
+
+.remote-videos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 75%;
+  height: 75%;
 }
 
 video {
-  width: 100%;
-  height: 100%;
+  width: 45%;
+  height: 45%;
+  margin: 1em;
+  border: 1px solid black;
 }
 
-#call-controls {
+.controls {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  align-items: center;
+  margin-top: 1em;
 }
 
 button {
-  padding: 10px;
-  margin: 0 10px;
+  margin: 1em;
+  padding: 0.5em;
+  font-size: 1em;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 0.25em;
 }
